--- a/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
+++ b/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
@@ -325,9 +325,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0q7-t0-NSK">
-                                <rect key="frame" x="20" y="158" width="374" height="579"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0q7-t0-NSK">
+                                <rect key="frame" x="20" y="233" width="374" height="579"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExerciseTableViewCell" rowHeight="365" id="B5y-Kh-u84" customClass="ExerciseTableViewCell" customModule="Fitnessing" customModuleProvider="target">
@@ -341,7 +340,13 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.98310596449999998" green="0.98310596449999998" blue="0.98310596449999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="vEl-dO-bjt" firstAttribute="bottom" secondItem="0q7-t0-NSK" secondAttribute="bottom" constant="34" id="aou-ew-bpp"/>
+                            <constraint firstItem="vEl-dO-bjt" firstAttribute="trailing" secondItem="0q7-t0-NSK" secondAttribute="trailing" constant="20" id="tMU-tt-VsX"/>
+                            <constraint firstItem="0q7-t0-NSK" firstAttribute="leading" secondItem="vEl-dO-bjt" secondAttribute="leading" constant="20" id="x9y-cY-IEF"/>
+                            <constraint firstItem="0q7-t0-NSK" firstAttribute="centerX" secondItem="a4q-Pf-pio" secondAttribute="centerX" id="yy9-d7-GuL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="vEl-dO-bjt"/>
                     </view>
                     <connections>
@@ -463,7 +468,7 @@
         <!--Add Exercises View Controller-->
         <scene sceneID="Kl6-Um-Q1E">
             <objects>
-                <viewController id="FPF-zW-Kv9" userLabel="Add Exercises View Controller" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="addExercises" id="FPF-zW-Kv9" userLabel="Add Exercises View Controller" customClass="AddExerciseViewController" customModule="Fitnessing" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cj3-wn-Dbc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
