--- a/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
+++ b/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
@@ -477,7 +477,7 @@
                                 <rect key="frame" x="10" y="232" width="394" height="579"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddExerciseTableViewCell" rowHeight="100" id="pM0-jG-GNs" customClass="AddExerciseTableViewCell" customModule="Fitnessing" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddExerciseTableViewCell" rowHeight="100" id="pM0-jG-GNs" customClass="AddExerciseTableViewCell" customModule="Fitnessing" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="394" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pM0-jG-GNs" id="Ut2-CK-qJ8">
