--- a/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
+++ b/Fitnessing/StoryBoards/Base.lproj/Main.storyboard
@@ -142,35 +142,35 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dWq-vu-G0L">
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dWq-vu-G0L">
                                                     <rect key="frame" x="27" y="69" width="50" height="96.333333333333314"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="Ogv-8f-LIp"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hfc-NS-9dZ">
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hfc-NS-9dZ">
                                                     <rect key="frame" x="77" y="69" width="50" height="96.333333333333314"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="8DC-lC-zDc"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oO4-ZZ-g20">
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oO4-ZZ-g20">
                                                     <rect key="frame" x="127" y="69" width="50" height="96.333333333333314"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="fPs-1Y-kyM"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hm4-Fk-JfW">
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hm4-Fk-JfW">
                                                     <rect key="frame" x="177" y="69" width="50" height="96.333333333333314"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="1dG-UM-MKi"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wpN-UN-vgJ">
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wpN-UN-vgJ">
                                                     <rect key="frame" x="227" y="69" width="50" height="96.333333333333314"/>
                                                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
@@ -206,14 +206,12 @@
                                                 <constraint firstItem="I61-3k-hlw" firstAttribute="leading" secondItem="Sxw-ou-rGv" secondAttribute="leading" constant="7" id="Ld6-I0-zlg"/>
                                                 <constraint firstItem="fea-Hu-nlG" firstAttribute="leading" secondItem="Fqk-pr-70V" secondAttribute="leading" id="N1E-uX-vI9"/>
                                                 <constraint firstAttribute="bottom" secondItem="hfc-NS-9dZ" secondAttribute="bottom" constant="20" id="OIM-dA-68R"/>
-                                                <constraint firstItem="hfc-NS-9dZ" firstAttribute="top" secondItem="Fqk-pr-70V" secondAttribute="bottom" constant="34.000000000000071" id="Q6E-EJ-D5B"/>
                                                 <constraint firstAttribute="trailing" secondItem="Mja-H7-kOp" secondAttribute="trailing" constant="45" id="QhO-lP-shN"/>
                                                 <constraint firstItem="heh-md-OEA" firstAttribute="bottom" secondItem="dWq-vu-G0L" secondAttribute="bottom" id="QsG-Hg-CDW"/>
                                                 <constraint firstItem="fea-Hu-nlG" firstAttribute="leading" secondItem="iZL-kE-yvL" secondAttribute="leading" id="SSB-Mh-g8O"/>
                                                 <constraint firstAttribute="bottom" secondItem="Hm4-Fk-JfW" secondAttribute="bottom" constant="20" id="Suc-tc-yAR"/>
                                                 <constraint firstAttribute="bottom" secondItem="oO4-ZZ-g20" secondAttribute="bottom" constant="20" id="Wee-BT-eQ8"/>
                                                 <constraint firstItem="iZL-kE-yvL" firstAttribute="top" secondItem="Fqk-pr-70V" secondAttribute="bottom" constant="2" id="Xdx-tD-uY7"/>
-                                                <constraint firstItem="hfc-NS-9dZ" firstAttribute="top" secondItem="Sxw-ou-rGv" secondAttribute="top" constant="69.000000000000071" id="ZB0-h7-h9W"/>
                                                 <constraint firstItem="fea-Hu-nlG" firstAttribute="leading" secondItem="Sxw-ou-rGv" secondAttribute="leading" constant="7" id="a7t-hU-2XX"/>
                                                 <constraint firstItem="Hm4-Fk-JfW" firstAttribute="leading" secondItem="oO4-ZZ-g20" secondAttribute="trailing" id="cFk-SN-ivt"/>
                                                 <constraint firstItem="VT4-Tr-bPk" firstAttribute="leading" secondItem="Sxw-ou-rGv" secondAttribute="leading" constant="10" id="cec-c1-lXN"/>
